--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "spica"
   ],
   "author": "Mavliut Fozliev",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YOUR_USERNAME/spica-symlink.git"
+  },
   "dependencies": {
     "caporal": "^1.4.0",
     "js-yaml": "^4.1.0"
